--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     container_name: laravel-app
     volumes:
       - ./src:/var/www/html
+      - storage:/var/www/html/storage
+      - cache:/var/www/html/bootstrap/cache
     depends_on:
       - postgres
     networks:
@@ -61,6 +63,8 @@ services:
 
 volumes:
   db_data:
+  storage:
+  cache:
 
 networks:
   laravel:
