--- a/src/package.json
+++ b/src/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
+        "pinia": "^3.0.2",
         "vue": "^3.5.13"
     }
 }
