--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,16 @@ services:
     container_name: laravel-app
     volumes:
       - ./src:/var/www/html
+      - node_modules:/var/www/html/node_modules
       - storage:/var/www/html/storage
       - cache:/var/www/html/bootstrap/cache
     depends_on:
       - postgres
     networks:
       - laravel
-    expose:
-      - "9000"
+    ports:
+      - "9000:9000"
+      - "5173:5173"
     environment:
       DB_CONNECTION: pgsql
       DB_HOST: postgres
@@ -49,20 +51,11 @@ services:
     networks:
       - laravel
 
-  node:
-    image: node:18
-    container_name: node
-    working_dir: /var/www/html
-    volumes:
-      - ./src:/var/www/html
-    command: tail -f /dev/null
-    networks:
-      - laravel
-
 volumes:
   db_data:
   storage:
   cache:
+  node_modules:
 
 networks:
   laravel:
