--- a/src/package.json
+++ b/src/package.json
@@ -6,12 +6,24 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0",
+        "@tailwindcss/postcss": "^4.1.6",
         "@tailwindcss/vite": "^4.0.0",
+        "@types/node": "^22.15.17",
+        "@vitejs/plugin-vue": "^5.2.4",
+        "@vue/tsconfig": "^0.7.0",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^6.3.5"
+        "postcss": "^8.5.3",
+        "tailwindcss": "^4.1.6",
+        "ts-loader": "^9.5.2",
+        "typescript": "^5.8.3",
+        "vite": "^6.3.5",
+        "vue": "^3.5.13",
+        "vue-tsc": "^2.2.10"
     },
     "name": "html",
     "version": "1.0.0",
@@ -24,9 +36,6 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@inertiajs/inertia": "^0.11.1",
-        "@inertiajs/inertia-vue3": "^0.6.0",
-        "pinia": "^3.0.2",
-        "vue": "^3.5.13"
+        "pinia": "^3.0.2"
     }
 }
