--- a/src/package.json
+++ b/src/package.json
@@ -33,6 +33,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "pinia": "^3.0.2"
+        "pinia": "^3.0.2",
+        "ziggy-js": "^2.5.2"
     }
 }
